# RAP

./: .gitignore  Cargo.toml  README.md  performancd.md  requirements.txt
.github/workflows/: default.yaml
Tools/: OpenAIP.ipynb  analyze_solution.ipynb  geojson.ipynb  overpass_turbo_queries.md  postgis_query.ipynb  shapefile.ipynb  utils.py
data/: highway_costs.toml
docker/: docker_run.sh
docs/: Postgis.md  performancd.md
src/: db.rs  lib.rs  main.rs  osm_collision.rs  osm_optimizer.rs  problem_definition.rs
src/backend/: server.rs
src/db/: config.rs  costs.rs  mod.rs  osm_optimizer.rs  osm_postgis.rs
src/server/: server.rs
tests/data/: dbconfig.json  problem_description_standard.json
