[package]
name = "rrisk"
version = "0.1.0"
authors = ["Carsten Ramke <carsten.ramke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "postgres", "json" ] }
futures = "0.3"
geo-types = "0.7.8"
prm = { git = "file:/home/samtal/prm", rev="185f130"}