[package]
name = "rap"
version = "0.1.0"
authors = ["Carsten Ramke <carsten.ramke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "postgres", "json" ] }
futures = "0.3"
mpl = { git = "https://github.com/cramke/motion_planning.git", ref="v0.0.2"} 
geo = "0.23.1"
wkt = "0.10.3"
actix-web = "4"
actix-cors = "0.6.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"